Generator/Tests/NeedleFrameworkTests/Fixtures/InvalidInits/InvalidInits5.swift
class RandomClass {

    var blah: Any?

    func someMethod() {
        return MyComp6onent6   (  parent   :    blah)
    }
}
